[package]
name = "sphinx_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
http = "1.4.0"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
turingram = { git = "https://github.com/EAimTY/turingram", version = "0.1.0" }
