[package]
name = "sphinx_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
turingram = { git = "https://github.com/EAimTY/turingram", version = "0.1.0", features = ["worker-0_8"] }
worker = { version = "0.8.1", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2+spec-1.1.0"
anyhow = "1.0.102"

[lib]
crate-type = ["cdylib", "rlib"]
